refactored status
